<resources>
    <string name="app_name">Parkside App</string>
    <string name="university_name">UW-Parkside</string>
    <string name="map">"Map"</string>
    <string name="rangerWellness">"Ranger Wellness"</string>
    <string name="news">"News"</string>
    <string name="navigate">"Navigate"</string>
    <string name="events">"Events"</string>
    <string name="eAccounts">"eAccounts"</string>
    <string name="computerLabs">"Computer Labs"</string>
    <string name="titleIX">"Title IX"</string>
    <string name="indoorNav">"IndoorNav"</string>
    <string name="student">"Student"</string>
    <string name="staff">"Staff"</string>
    <string name="wellnessId">"wellness"</string>
    <string name="eventsId">"events"</string>
    <string name="navigateId">"navigate"</string>
    <string name="eaccountsId">"eaccounts"</string>
    <string name="newsId">"news"</string>
    <string name="mapId">"map"</string>
    <string name="computerId">"computer"</string>
    <string name="menuId">"menu"</string>
    <string name="studentId">"student"</string>
    <string name="staffId">"staff"</string>
    <string name="event_url">"https://www.uwp.edu/customcf/xml/getevents.cfm"</string>
    <string name="news_url">https://www.uwp.edu/customcf/xml/getnews.cfm</string>
    <string name="Home">Home</string>
    <string name="News">News</string>
    <string name="Map"> Campus Map</string>
    <string name="Event">Events</string>
    <string name="Canvas">Canvas</string>
    <string name="Lab">Computer Lab</string>
    <string name="d2l">Desire2Learn</string>
    <string name="Library">Library</string>
    <string name="Athletes">Athletes</string>
    <string name="Radio">Radio</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="menu">Menu</string>
    <string name="HomePhase1">Gatherings\n\n- Gatherings limited to no more than 10 people.  Flexibility will be allowed for larger venues that can accommodate proper social distancing. Room capacity is based on room size and current social distancing guidelines.\n\nFace Coverings\n\n- Face coverings are required to be worn in all public areas.\n\nSocial Distancing\n\n- At least 6-feet of separation should be maintained between individuals.\n\nCampus Access\n\n- Access to the main complex will only be allowed thru the Rita main entrance by using the ID card swipe. All other entrances will remain locked. Students requiring access will need to seek approval in order to get their names added to the ID swipe system.\n\nVisitors on Campus (excludes students)\n\n- Generally, visitors will not be allowed on campus. If need be, the visitor will need to be pre-approved. Visitors are required to check in to the Police Department. No congregating in waiting rooms or lobbies.Maintain visitor log for tracing efforts.\n\nVulnerable Populations\n\n- Avoid physical interactions with high-risk individuals as much as possible. Employer may ask questions to determine whether an employee needs an accommodation. Explore alternative accommodations that may allow the employee to perform the essential functions of the position.\n\nTesting\n\n- Testing for COVID-19 required for any known case or known contact (anybody at the University who spent at least 15 minutes within 6 feet of the case) be quarantined and tested.\n\nStaffing\n\n- Encourage employees to continue to work remotely. Departments should maintain only minimal staffing on campus to perform essential functions and provide essential support for students. Encourage flexible working arrangements such as rotating shifts. Departments should consider operating with no more than 50% of normal staffing levels at any one time.\n\nCommon Spaces\n\n- Regularly disinfect high-touch areas (e.g., door handles, buttons/switches, handrails, check-out counters, restroom surfaces, etc.). Do not congregate. Provide hand sanitizer for individuals at entrance and exit.\n\nOffices\n\n- Regularly disinfect high-touch areas (e.g., door handles, buttons/switches, handrails, check-out counters, restroom surfaces, etc.). Do not congregate.</string>
    <string name="ClassCondP1">- Online instruction with limited exceptions approved by the Dean and/or designee based upon the ability to maintain safety for students, staff, and faculty.\n\n- If in-person classes are held, room capacity is based on room size and current social distancing guidelines\n\n- If in-person classes are held, at least 6-feet of separation should be maintained between individuals.\n\n- Face coverings must be worn in all classrooms\n\n- Daily deep cleaning by custodial staff.\n\n- Cleaning supplies will be available to self-clean surfaces as needed (ex: as you enter the class).\n\n- Attendance taking is required to facilitate contact tracing should the need arise.</string>
    <string name="AthleticsP1">Athletic Events\n\n- Athletic Events have been canceled for the remainder of the academic year.\n\nAthletic Events/External Rentals\n\n- Low Risk activities including but not limited to tennis, pickle ball, and disc golf may resume. Athletic Events and external rentals have been canceled until further notice. Gatherings limited to no more than 10 people. Flexibility will be allowed for larger venue that can accommodate proper social distancing. Room capacity is based on room size and current social distancing guidelines.\n\nWood Road Field\n\n- Closed to all events until further notice.\n\nSoccer Fields\n\n- Closed to all events until further notice.\n\nCase Softball Complex/Red Oberbrunner Field\n\n- Closed to all events until further notice.\n\nWayne E Dannehl National Cross Country Course/ Outdoor Track\n\n- Closed to all events until further notice. Outdoor Track Closed to all events until further notice. Runners/Hikers must practice social distancing.\n\nSAC Offices\n\n- At least 6-feet of separation should be maintained between individuals. Regularly disinfect high-touch areas.\n\nDe Simone Gym\n\n- Closed to all events until further notice.\n\nPetretti Fieldhouse\n\n- Open at limited capacity only for team/athlete use based on NCAA/GLIAC/State/Local recommendations. Closed to all events until further notice.\n\nStrength &amp; Conditioning/Wellness Centers\n\n- Open at &#189; capacity and occupants must practice social distancing Staff cleans surfaces after every use.Employees screened daily and wear masks.\n\nAthletic Training Room\n\n- Open for 1 on 1 treatments by appointment only.Facility is cleaned and disinfected after each use. Athletic Training staff and students should wear face coverings.</string>
    <string name="FoodServP1">- Order/take-and-go options only, limited hours service available at Brickstone Grill &amp; Eatery only, all other dining facilities closed.\n\n- No catering events allowed.\n\n- Symptom checking of employees.\n\n- Staff wear face coverings.\n\n- No self-service buffet, meals plated and dropped at central pick up area, utensils distributed individually with food.\n\n- Stagger workstations so workers can maintain a 6 ft. distance and do not face one another.\n\n- UW-Parkside payment system is largely touchless and cashless. Associates that do operate a POS regularly sanitize the workstation and their hands between handling cards and cash. Plexiglas shield will be installed at POS stations.\n\n- Staff must sanitize hands between handling payment options and food/containers.\n\n- UW Parkside dining services will provide pre order and take-and-go only following Kenosha County Health Department regulations and CDC guidelines.</string>
    <string name="CommEveP1">- All events held on campus are canceled until further notice.\n\n- Gatherings limited to no more than 10 people. Flexibility will be allowed for larger venue that can accommodate proper social distancing. Room capacity is based on room size and current social distancing guidelines.\n\n- General public and employers take extreme caution.\n\n- May provide accommodations to high-risk employees.\n\n- Minimize face-to-face interactions with others (e.g., install partitions, etc.)\n\n- High-contact businesses can operate under strict protocols.\n\n- Self monitor symptoms before any business interactions.\n\n- Certification must be displayed to the public.</string>
    <string name="FacManP1">- All staff who can work remotely should continue to do so.\n\n- No groups larger than 10. Meals, breaks and meetings should be staggered to allow for social distancing.\n\n- No more than 2 employees working in one area at a time, unless needed for safety reasons.\n\n- Shared tools should be sanitized after use.\n\n- Employees should regularly sanitize high-touch areas of campus.\n\n- Employees should sanitize vehicle/equipment door handles, steering wheel, and other areas touched, when returning a vehicle for others to use.\n\n- Increase building ventilation rates.\n\n- Increase outside air percentage that circulates.\n\nCampus Project Contractors/Consultants\n\n- Contractors working on campus construction projects are responsible for adhering to CDC guidelines relative to reporting and responding to suspected COVID-19 cases.\n\nState Project Contractors/Consultants\n\n- Contractors working on State construction projects are responsible for adhering to guidelines provided by the Department of Administration, Division of Facilities Development and Management.</string>
    <string name="FacOffHrsP1">- Virtual meetings for student meetings recommended.\n\n- In-person meetings should be limited to one student per meeting.\n\n- It is recommended that faculty clean touch-point surfaces following each meeting.</string>
    <string name="about_title">APP FACTORY</string>
    <string name="about_body1">We provide conceptual designing and prototype mobile app development services to help find solutions and strategies for technology challenges.
    </string>
    <string name="about_body2">Graduate and undergraduate students, along with faculty from computer science, business, art, and other disciplines, collaborate to create these apps in a “startup company” environment. Students gain real world experience working with clients and working on live projects as part of internships or course credit.</string>
    <string name="about_body3">The financial donations allow us to develop projects for nonprofit organizations that would normally not be able to afford a mobile app. Our student interns are paid through financial donations of clients and donors. (Include “App Factory” in the Donation Information section.)</string>
    <string name="about_learn_more">Learn more about App Factory at <a href="http://appfactoryuwp.com">appfactoryuwp.com</a></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacyPolicyTosBlock">By registering to use this app, you agree to our Privacy Policy and Terms of Service.</string>
    <string name="reset_password">Password Reset</string>
    <string name="send_email">Send Email</string>
    <string name="back">Back</string>
    <string name="emailEditTextHint">UWP Email</string>
    <string name="passwordEditText">Password</string>
    <string name="confirmPasswordEditText">Confirm password</string>
    <string name="signUpTextButton">Sign Up</string>
</resources>