<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:src="@drawable/app_factory_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/about_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/about_body1"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/about_body2"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/about_body3"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/about_learn_more"
                android:layout_marginBottom="20dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:autoLink="web"
                android:paddingBottom="50dp"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>