<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tpa2.auth.TPA2SignUpFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/signUpBackButton"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_green"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/uwpIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bigbear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordEmailLayout"/>

    <LinearLayout
        android:id="@+id/passwordEmailLayout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/border"
            android:hint="@string/emailEditTextHint"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="#000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border"
                android:hint="@string/passwordEditText"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border"
                android:hint="@string/confirmPasswordEditText"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_round_button"
        android:text="@string/signUpTextButton"
        android:textColor="#FFFFFF"
        android:backgroundTint="#287E52"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/signUpProgressBarCardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        app:cardBackgroundColor="#57424242"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/signUpProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/colorPrimaryDark" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
